--- a/gradle.properties
+++ b/gradle.properties
@@ -51,3 +51,5 @@ mod_group_id=com.chromanyan
 mod_authors=ChromaNyan
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Unorthodox magical enhancements for your existing equipment
+
+jei_version=11.5.0.297
