this shouldn't be required

--- a/src/main/resources/data/chromaticenchantments/tags/items/persistence_applicable.json
+++ b/src/main/resources/data/chromaticenchantments/tags/items/persistence_applicable.json
@@ -1,6 +1,6 @@
 {
   "values": [
     "minecraft:bundle",
-    "chromagadgets:wandering_bundle"
+    {"id": "chromagadgets:wandering_bundle", "required": false}
   ]
 }
