--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -64,3 +64,9 @@ description='''${mod_description}'''
    versionRange="${minecraft_version_range}"
    ordering="NONE"
    side="BOTH"
+[[dependencies."${mod_id}"]]
+   modId="curios"
+   mandatory=false
+   versionRange="[1.19.2-5.1.1.0,)"
+   ordering="AFTER"
+   side="BOTH"
