add catalogue and enchdesc to project

--- a/build.gradle
+++ b/build.gradle
@@ -179,6 +179,11 @@ dependencies {
 
     runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
 
+    runtimeOnly fg.deobf("curse.maven:catalogue-459701:4171024") // catalogue 1.7.0
+
+    runtimeOnly fg.deobf("curse.maven:bookshelf-228525:4556697") // bookshelf 16.3.20
+    runtimeOnly fg.deobf("curse.maven:enchantment-descriptions-250419:4277356") // enchantment descriptions 13.0.14
+
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
