--- a/gradle.properties
+++ b/gradle.properties
@@ -49,6 +49,7 @@ mod_version=1.0.0
 mod_group_id=com.chromanyan
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=ChromaNyan
+mod_credits=TwilightStar (Mod icon)
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Unorthodox magical enhancements for your existing equipment
 
