--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -30,7 +30,7 @@ displayName="${mod_name}" #mandatory
 # A file name (in the root of the mod JAR) containing a logo for display
 #logoFile="chromaticenchantments.png" #optional
 # A text field displayed in the mod UI
-#credits="Thanks for this example mod goes to Java" #optional
+credits="${mod_credits}" #optional
 # A text field displayed in the mod UI
 authors="${mod_authors}" #optional
 # Display Test controls the display for your mod in the server connection screen
@@ -77,3 +77,6 @@ description='''${mod_description}'''
    versionRange="[13,)"
    ordering="BEFORE"
    side="CLIENT"
+
+[modproperties."${mod_id}"]
+   catalogueImageIcon="icon.png"
